--- a/app/about/templates/about/league.html
+++ b/app/about/templates/about/league.html
@@ -9,7 +9,7 @@
   {{ super() }}
   <div class="container-sm">
     <div class="container text-center py-3">
-      <img src="{{ url_for('static', filename='img/NPSL-Logo.png') }}" alt="National Premier Soccer League Logo" class="img">
+      <img src="{{ url_for('static', filename='img/NPSL-logo.png') }}" alt="National Premier Soccer League Logo" class="img">
     </div>
     <h1 class="py-4 text-center">National Premier Soccer League</h1>
     <p>Greenville United Football Club joined the National Premier Soccer League (NPSL) on January 16th, 2023. The NPSL is one of the largest established men’s soccer leagues in the United States with over 90 teams competing across the country and is a successor to the Men’s Premier Soccer League (MPSL), which was formed in 2002. The NPSL is a member of the United States Adult Soccer Association (USASA) and is thereby affiliated with the United States Soccer Federation (USSF). The NPSL’s cooperative and turnkey ownership platform has led to its explosive growth, countless player development opportunities, and commitment to grow the game in the United States.</p>
